# OS-lab2

./: CMakeLists.txt  README.md  main.cpp  thread_tests.cpp  threads.cpp  threads.h
